tests/spec/compile-fail/087_await_in_defer_across_await.zn
// category: compile-fail
// profile: hosted
// purpose: defer that survives across await cannot itself await during cleanup

module tests.fail.awaitInDeferAcrossAwait;

async fn bad(move file: File) -> Result<Unit, IoError> {
    defer {
        await file.closeAsync(); // expected-error: defer crossing await cannot contain await
    }

    try await file.readU32();
    return Ok(());
}
